bridge/base/client-deployment.yaml
#! client-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client
    namespace: jobfit-app
    labels:
        com.docker.compose.project: jobfit-app
        com.docker.compose.service: client
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: jobfit-app
            com.docker.compose.service: client
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: jobfit-app
                com.docker.compose.service: client
                com.docker.compose.network.jobfit-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: jobfit-client
                  image: jobfit-client:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: client-80
                      containerPort: 80
