bridge/base/server-deployment.yaml
#! server-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: server
    namespace: jobfit-app
    labels:
        com.docker.compose.project: jobfit-app
        com.docker.compose.service: server
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: jobfit-app
            com.docker.compose.service: server
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: jobfit-app
                com.docker.compose.service: server
                com.docker.compose.network.jobfit-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: jobfit-server
                  image: jobfit-server:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: server-5000
                      containerPort: 5000
