bridge/base/client-expose.yaml
#! client-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: client
    namespace: jobfit-app
    labels:
        com.docker.compose.project: jobfit-app
        com.docker.compose.service: client
spec:
    selector:
        com.docker.compose.project: jobfit-app
        com.docker.compose.service: client
    ports:
        - name: client-80
          port: 80
          targetPort: client-80
