bridge/base/jobfit-network-network-policy.yaml
#! jobfit-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: jobfit-network-network-policy
    namespace: jobfit-app
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.jobfit-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.jobfit-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.jobfit-network: "true"
